# cu_fall_2025

./: .gitignore  .gitmodules  README.md
math-5593/: README.md  pyproject.toml
math-5593/final_project/: ideas.md
math-5593/homework/hw-collection-1/LaTex/: .1.5.tex.swp  .1.6.tex.swp  1.1.tex  1.2.aux  1.2.tex  1.3.alt.aux  1.3.aux  1.3.tex  1.4.aux  1.4.tex  1.5.aux  1.5.tex  1.6.aux  1.6.tex  1.7.tex  appendix.tex  main.aux  main.tex  preamble.tex
math-5593/homework/hw-collection-1/code/: ampl-1-2.py  ampl-1-3.py  ampl-1-3c.py  ampl-2-6.py  ampl-4-5.py  ampl-4-5a-scenarios.py  ampl-4-5b.py  hw3.R  scratchnotes.md
math-5593/homework/hw-collection-1/data/: reheat-profit-table-edgecases.csv
math-5593/homework/hw-collection-1/models/: cut.mod  cut_hwb.mod
math-5593/homework/hw-collection-2/models/: gpt-napkins.mod  napkins-network.mod  napkins.mod  netthru.mod  scratchwork.txt
math-5593/homework/hw-collection-2/scripts/: knapsack.py  napkins.py  netthru.py
math-5593/homework/hw-collection-2/typst/: 18-5.typ  20-4.typ  cheatsheet.typ  graph-networks.typ  hw10.typ  hw11.typ  hw12.typ  hw13.typ  hw14.typ  hw8.typ  hw9.typ  main.typ
math-5593/homework/hw-collection-3/models/: dietflex.mod
math-5593/homework/hw1/: .1.1.tex.swp  .1.2.tex.swp  1.1.tex  1.2.aux  1.2.tex  1.3.aux  1.3.tex  1.4.tex  1.5.tex  1.6.tex  main.aux  main.tex  preamble.tex
math-5593/lecture_notes/: day-1-lp-notes.md  day-1-notes.md  day-2-notes.md  day-3-notes.md
math-5593/models/: steel.mod
math-5593/tinkering/: check-basic-functionality.py  sep-4-class-example.py
(+149 files in other folders)
