[project]
name = "math-5593"
version = "0.1.0"
description = ""
authors = [
    {name = "Brady Lamson",email = "lamsonbrady@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "amplpy (>=0.15.2,<0.16.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "polars (>=1.32.3,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
